--- a/home.html
+++ b/home.html
@@ -227,6 +227,7 @@
       <button onclick="location.href='quotation.html'">📦 報價計算</button>
       <button onclick="location.href='orders.html'">🧾 訂單管理</button>
       <button onclick="location.href='products.html'">📁 庫存管理</button>
+      <button onclick="location.href='shipment.html'">🚚 出貨管理開發中</button>
       <button onclick="location.href='report.html'">📊 報表分析</button>
       <button onclick="location.href='link-management.html'">🔗網址連結管理</button>
       <button onclick="location.href='blacklist.html'">⛔ 黑名單管理</button>
