--- a/order_registration.html
+++ b/order_registration.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>11DG11-快速商品登記</title>
+  <title>11DG11-限時連線</title>
   <link rel="icon" href="favicon.png">
   <style>
     :root {
@@ -155,7 +155,7 @@
   
 <body>
 
-  <h1>11DG11-快速商品登記</h1>
+  <h1>11DG11-限時連線</h1>
 
   <form id="orderForm">
     <input type="text" id="customerName" placeholder="客戶姓名" required />
@@ -340,6 +340,7 @@
 <!-- 側邊選單 -->
 <nav class="side-menu" id="sideMenu">
   <a href="quotation.html">報價系統</a>
+  <a href="orders.html">訂單管理</a>
   <a href="products.html">庫存管理</a>
   <a href="shipment.html">出貨管理</a>
   <a href="report.html">報表分析</a>
