--- a/link-management.html
+++ b/link-management.html
@@ -408,6 +408,7 @@
       <a href="orders.html">訂單管理</a>
       <a href="products.html">庫存管理</a>
       <a href="shipment.html">出貨管理</a>
+      <a href="order_registration.html">限時連線</a>
       <a href="report.html">報表分析</a>
       <a href="blacklist.html">黑名單</a>
     </nav>
