--- a/shipment.html
+++ b/shipment.html
@@ -534,6 +534,7 @@
      <a href="orders.html">訂單管理</a>
      <a href="products.html">庫存管理</a>
      <a href="report.html">報表分析</a>
+     <a href="order_registration.html">限時連線</a>
      <a href="link-management.html">網址連結管理</a>
      <a href="blacklist.html">黑名單</a>
    </nav>
