--- a/order_registration.html
+++ b/order_registration.html
@@ -13,10 +13,15 @@
       --border-color: #f8bbd0;
       --text-color: #880e4f;
       --background: #fff7fb;
+      --shadow-color: rgba(244, 143, 177, 0.3);
+      --accent-color: #ba68c8;
+      --dark-text: #4a0044;
     }
   
     * {
       box-sizing: border-box;
+      margin: 0;
+      padding: 0;
     }
   
     body {
@@ -25,13 +30,18 @@
       padding: 20px;
       color: var(--text-color);
       margin: 0;
+      opacity: 0;
+      animation: fadeIn 1s ease-out forwards;
     }
   
     h1, h2 {
       text-align: center;
-      color: var(--text-color);
+      color: var(--dark-text);
       margin-top: 30px;
       margin-bottom: 10px;
+      opacity: 0;
+      animation: slideIn 1s ease-out forwards;
+      animation-delay: 0.2s;
     }
   
     form, .table-container {
@@ -40,7 +50,10 @@
       background: white;
       padding: 20px;
       border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(244, 143, 177, 0.2);
+      box-shadow: 0 10px 30px var(--shadow-color);
+      opacity: 0;
+      animation: fadeInUp 1s ease-out forwards;
+      animation-delay: 0.4s;
     }
   
     input {
@@ -49,14 +62,14 @@
       margin: 8px 0;
       border-radius: 8px;
       border: 1px solid var(--border-color);
-      transition: 0.2s ease;
+      transition: all 0.3s ease;
       font-size: 16px;
     }
   
     input:focus {
       border-color: var(--main-pink);
       outline: none;
-      box-shadow: 0 0 4px var(--main-pink);
+      box-shadow: 0 0 10px var(--main-pink);
     }
   
     button {
@@ -67,11 +80,13 @@
       border-radius: 8px;
       cursor: pointer;
       font-size: 16px;
-      transition: 0.2s ease;
+      transition: all 0.3s ease;
     }
   
     button:hover {
       background: var(--hover-pink);
+      transform: translateY(-2px);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     }
   
     .table-container {
@@ -91,11 +106,16 @@
       padding: 12px;
       text-align: center;
       font-size: 15px;
+      transition: background 0.3s ease;
     }
   
     th {
       background: var(--light-pink);
       color: var(--text-color);
+    }
+  
+    tr:hover {
+      background-color: var(--light-pink);
     }
   
     .actions button {
@@ -150,6 +170,94 @@
         padding: 8px 14px;
       }
     }
+  
+    .back-to-home-btn {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      background: linear-gradient(45deg, #f06292, #ba68c8);
+      color: white;
+      padding: 12px 24px;
+      border-radius: 999px;
+      font-weight: bold;
+      text-decoration: none;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+      z-index: 1000;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      opacity: 0;
+      animation: fadeInUp 1s ease-out forwards;
+      animation-delay: 0.6s;
+    }
+  
+    .back-to-home-btn:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
+    }
+  
+    @media (max-width: 600px) {
+      .back-to-home-btn {
+        padding: 10px 16px;
+        font-size: 14px;
+        top: 15px;
+        right: 15px;
+      }
+    }
+  
+    @keyframes fadeIn {
+      to {
+        opacity: 1;
+      }
+    }
+  
+    @keyframes fadeInUp {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+  
+    @keyframes slideIn {
+      from {
+        opacity: 0;
+        transform: translateX(-30px);
+      }
+      to {
+        opacity: 1;
+        transform: translateX(0);
+      }
+    }
+  
+    /* Adding additional subtle animation effects for form interactions */
+    .form-elements input, .form-elements button {
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
+  
+    .form-elements input:focus, .form-elements button:hover {
+      transform: scale(1.05);
+      box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
+    }
+  
+    /* Hover effects on table rows */
+    tr:hover {
+      background-color: var(--light-pink);
+      cursor: pointer;
+    }
+  
+    /* Table sorting indicators */
+    th.sorted-asc::after {
+      content: "↑";
+      margin-left: 8px;
+    }
+  
+    th.sorted-desc::after {
+      content: "↓";
+      margin-left: 8px;
+    }
+  
   </style>
   
   
@@ -198,142 +306,162 @@
     </table>
 
     <button style="margin-top:20px;" onclick="exportToExcel()">匯出 Excel</button>
+    <button onclick="deleteAllOrders()">🗑️ 刪除所有記錄</button>
+
   </div>
 
-  <!-- Firebase -->
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
-  <!-- 匯出 Excel -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
+<!-- Firebase -->
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
+<!-- 匯出 Excel -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
 
-  <script>
-    // Firebase 設定（請替換為你的資訊）
-    const firebaseConfig = {
-  apiKey: "AIzaSyCT0Li1XXZ4hZjBTrU8rp1N-ixV5dTrSZQ",
-  authDomain: "dg11-c954c.firebaseapp.com",
-  projectId: "dg11-c954c",
-  storageBucket: "dg11-c954c.firebasestorage.app",
-  messagingSenderId: "1010585577335",
-  appId: "1:1010585577335:web:ad4f84c5205ba048b22372"
-};
+<script>
+  // Firebase 設定（請替換為你的資訊）
+  const firebaseConfig = {
+    apiKey: "AIzaSyCT0Li1XXZ4hZjBTrU8rp1N-ixV5dTrSZQ",
+    authDomain: "dg11-c954c.firebaseapp.com",
+    projectId: "dg11-c954c",
+    storageBucket: "dg11-c954c.firebasestorage.app",
+    messagingSenderId: "1010585577335",
+    appId: "1:1010585577335:web:ad4f84c5205ba048b22372"
+  };
 
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
-    const collection = db.collection("order_registrations"); // ✅ 使用專屬集合
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
+  const collection = db.collection("order_registrations");
 
-    const form = document.getElementById("orderForm");
-    const orderList = document.getElementById("orderList");
-    const orderStats = document.getElementById("orderStats");
-    const searchInput = document.getElementById("searchInput");
+  const form = document.getElementById("orderForm");
+  const orderList = document.getElementById("orderList");
+  const orderStats = document.getElementById("orderStats");
+  const searchInput = document.getElementById("searchInput");
 
-    form.addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const name = document.getElementById("customerName").value.trim();
-      const product = document.getElementById("productName").value.trim();
-      const shade = document.getElementById("shade").value.trim();
-      const editId = document.getElementById("editId").value;
+  form.addEventListener("submit", async (e) => {
+    e.preventDefault();
+    const name = document.getElementById("customerName").value.trim();
+    const product = document.getElementById("productName").value.trim();
+    const shade = document.getElementById("shade").value.trim();
+    const editId = document.getElementById("editId").value;
 
-      if (editId) {
-        await collection.doc(editId).update({ customer: name, product, shade });
-        document.getElementById("editId").value = "";
-      } else {
-        await collection.add({ customer: name, product, shade, timestamp: new Date() });
-      }
-
-      form.reset();
-      loadOrders();
-      loadStats();
-    });
-
-    async function loadOrders() {
-      const query = searchInput.value.trim().toLowerCase();
-      const snapshot = await collection.orderBy("timestamp", "desc").get();
-      orderList.innerHTML = "";
-
-      snapshot.forEach(doc => {
-        const { customer, product, shade } = doc.data();
-        if (query && ![customer, product, shade].some(v => v.toLowerCase().includes(query))) return;
-
-        const row = document.createElement("tr");
-        row.innerHTML = `
-          <td>${customer}</td>
-          <td>${product}</td>
-          <td>${shade}</td>
-          <td class="actions">
-            <button onclick="editOrder('${doc.id}', '${customer}', '${product}', '${shade}')">✏️</button>
-            <button onclick="deleteOrder('${doc.id}')">🗑️</button>
-          </td>
-        `;
-        orderList.appendChild(row);
-      });
+    if (editId) {
+      await collection.doc(editId).update({ customer: name, product, shade });
+      document.getElementById("editId").value = "";
+    } else {
+      await collection.add({ customer: name, product, shade, timestamp: new Date() });
     }
 
-    async function deleteOrder(id) {
-      if (confirm("確定要刪除此筆紀錄？")) {
-        await collection.doc(id).delete();
-        loadOrders();
-        loadStats();
-      }
-    }
-
-    function editOrder(id, customer, product, shade) {
-      document.getElementById("customerName").value = customer;
-      document.getElementById("productName").value = product;
-      document.getElementById("shade").value = shade;
-      document.getElementById("editId").value = id;
-    }
-
-    async function loadStats() {
-      const snapshot = await collection.get();
-      const stats = {};
-
-      snapshot.forEach(doc => {
-        const { customer, product, shade } = doc.data();
-        const key = `${product}__${shade}`;
-        if (!stats[key]) {
-          stats[key] = { product, shade, quantity: 0, customers: [] };
-        }
-        stats[key].quantity++;
-        stats[key].customers.push(customer);
-      });
-
-      orderStats.innerHTML = "";
-      Object.values(stats).forEach(entry => {
-        const row = document.createElement("tr");
-        row.innerHTML = `
-          <td>${entry.product}</td>
-          <td>${entry.shade}</td>
-          <td>${entry.quantity}</td>
-          <td>${[...new Set(entry.customers)].join(", ")}</td>
-        `;
-        orderStats.appendChild(row);
-      });
-    }
-
-    function exportToExcel() {
-      const rows = [];
-      document.querySelectorAll("#orderStats tr").forEach(tr => {
-        const cells = tr.querySelectorAll("td");
-        rows.push({
-          商品名稱: cells[0].innerText,
-          色號: cells[1].innerText,
-          數量: cells[2].innerText,
-          客戶名單: cells[3].innerText
-        });
-      });
-
-      const ws = XLSX.utils.json_to_sheet(rows);
-      const wb = XLSX.utils.book_new();
-      XLSX.utils.book_append_sheet(wb, ws, "統計");
-      XLSX.writeFile(wb, "快速登記統計.xlsx");
-    }
-
-    searchInput.addEventListener("input", loadOrders);
-
-    // 初始化
+    form.reset();
     loadOrders();
     loadStats();
-  </script>
+  });
+
+  async function loadOrders() {
+    const query = searchInput.value.trim().toLowerCase();
+    const snapshot = await collection.orderBy("timestamp", "desc").get();
+    orderList.innerHTML = "";
+
+    snapshot.forEach(doc => {
+      const { customer, product, shade } = doc.data();
+      if (query && ![customer, product, shade].some(v => v.toLowerCase().includes(query))) return;
+
+      const row = document.createElement("tr");
+      row.innerHTML = `
+        <td>${customer}</td>
+        <td>${product}</td>
+        <td>${shade}</td>
+        <td class="actions">
+          <button onclick="editOrder('${doc.id}', '${customer}', '${product}', '${shade}')">✏️</button>
+          <button onclick="deleteOrder('${doc.id}')">🗑️</button>
+        </td>
+      `;
+      orderList.appendChild(row);
+    });
+  }
+
+  async function deleteOrder(id) {
+    if (confirm("確定要刪除此筆紀錄？")) {
+      await collection.doc(id).delete();
+      loadOrders();
+      loadStats();
+    }
+  }
+
+  function editOrder(id, customer, product, shade) {
+    document.getElementById("customerName").value = customer;
+    document.getElementById("productName").value = product;
+    document.getElementById("shade").value = shade;
+    document.getElementById("editId").value = id;
+  }
+
+  async function loadStats() {
+    const snapshot = await collection.get();
+    const stats = {};
+
+    snapshot.forEach(doc => {
+      const { customer, product, shade } = doc.data();
+      const key = `${product}__${shade}`;
+      if (!stats[key]) {
+        stats[key] = { product, shade, quantity: 0, customers: [] };
+      }
+      stats[key].quantity++;
+      stats[key].customers.push(customer);
+    });
+
+    orderStats.innerHTML = "";
+    Object.values(stats).forEach(entry => {
+      const row = document.createElement("tr");
+      row.innerHTML = `
+        <td>${entry.product}</td>
+        <td>${entry.shade}</td>
+        <td>${entry.quantity}</td>
+        <td>${[...new Set(entry.customers)].join(", ")}</td>
+      `;
+      orderStats.appendChild(row);
+    });
+  }
+
+  function exportToExcel() {
+    const rows = [];
+    document.querySelectorAll("#orderStats tr").forEach(tr => {
+      const cells = tr.querySelectorAll("td");
+      rows.push({
+        商品名稱: cells[0].innerText,
+        色號: cells[1].innerText,
+        數量: cells[2].innerText,
+        客戶名單: cells[3].innerText
+      });
+    });
+
+    const ws = XLSX.utils.json_to_sheet(rows);
+    const wb = XLSX.utils.book_new();
+    XLSX.utils.book_append_sheet(wb, ws, "統計");
+    XLSX.writeFile(wb, "快速登記統計.xlsx");
+  }
+
+  // 🔥 新增：刪除全部資料功能
+  async function deleteAllOrders() {
+    if (!confirm("確定要刪除所有記錄？此動作無法復原！")) return;
+
+    const snapshot = await collection.get();
+    const batch = db.batch();
+
+    snapshot.forEach(doc => {
+      batch.delete(doc.ref);
+    });
+
+    await batch.commit();
+    loadOrders();
+    loadStats();
+    alert("所有記錄已刪除。");
+  }
+
+  searchInput.addEventListener("input", loadOrders);
+
+  // 初始化
+  loadOrders();
+  loadStats();
+</script>
+
 
 <div class="hamburger" onclick="toggleMenu()">☰</div>
 
@@ -403,6 +531,6 @@
       }
     }
   </script>
-  
+      <a href="home.html" class="back-to-home-btn">🏠 返回主頁</a>
 </body>
 </html>
