--- a/blacklist.html
+++ b/blacklist.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>黑名單管理 - 11DG11</title>
+  <title>11DG11-黑名單管理</title>
   <link rel="icon" href="favicon.png">
   <style>
     :root {
@@ -185,7 +185,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>黑名單管理</h1>
+    <h1>11DG11-黑名單管理</h1>
 
     <form id="blacklistForm">
       <label for="lineId">LINE ID：</label>
