--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="zh-TW">
 <head>
   <meta charset="UTF-8">
-  <title>11DG11 主頁</title>
+  <title>11DG11-主頁</title>
   <link rel="icon" href="favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
   <style>
