--- a/orders.html
+++ b/orders.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8">
-  <title>11DG11 訂單管理</title>
+  <title>11DG11-訂單管理</title>
   <link rel="icon" href="favicon.png">
    <!-- Firebase CDN -->
    <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-app-compat.js"></script>
@@ -238,7 +238,7 @@
 <body>
     <body class="floating-hearts">
 <div class="container">
-  <h1>訂單管理</h1>
+  <h1>11DG11-訂單管理</h1>
 
   <div class="form-group">
     <label for="productName">商品名稱</label>
