--- a/products.html
+++ b/products.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8" />
-  <title>11DG11 庫存管理</title>
+  <title>11DG11-庫存管理</title>
   <link rel="icon" href="favicon.png">
   <style>
   @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap');
@@ -276,7 +276,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>11DG11 庫存管理</h1>
+    <h1>11DG11-庫存管理</h1>
     <table>
       <thead>
         <tr>
