--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>註冊 - 11DG11</title>
+  <title>11DG11-註冊系統</title>
   <link rel="icon" href="favicon.png">
   <style>
     body {
