--- a/report.html
+++ b/report.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8" />
-  <title>11DG11｜報表分析</title>
+  <title>11DG11-報表分析</title>
   <link rel="icon" href="favicon.png">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.sheetjs.com/xlsx-0.20.0/package/xlsx.mini.min.js"></script>
@@ -234,7 +234,7 @@
   
 </head>
 <body>
-  <h1>📊 報表分析</h1>
+  <h1>📊 11DG11-報表分析</h1>
 
   <div class="top-right-buttons">
     <a href="products.html" class="nav-btn">📁 庫存管理</a>
