--- a/shipment.html
+++ b/shipment.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="icon" href="favicon.png">
-  <title>出貨管理</title>
+  <title>11DG11-出貨管理</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
     
@@ -373,7 +373,7 @@
 </head>
 <body>
 
-  <h1>📦 出貨管理</h1>
+  <h1>📦 11DG11-出貨管理</h1>
 
   <div class="card search-box">
     <input type="text" id="searchInput" placeholder="🔍 輸入訂單編號搜尋">
